<resources>
    <string name="app_name">Dictionary</string>
    <string name="tab_text_1_favorites">FAVORITES</string>
    <string name="tab_text_2_recent">TRAINING</string>
    <string name="tab_text_3_all">ALL</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tvNext">NEXT</string>
    <string name="tvPopupNewSetTitle">New set</string>
    <string name="tvPopupNewSetName">Set name</string>
    <string name="etPopUpNewSet">New set</string>
    <string name="btnPopUpOk">OK</string>
    <string name="btnNewSetCreate">Create</string>
    <string name="tvPopupEditWord">Edit</string>
    <string name="tvDoYouKnow">Can you remember this word?</string>
    <string name="btnYes">Yes</string>
    <string name="btnNo">No</string>
    <string name="btnTraining">Training</string>
    <string name="tvPopUpTraining">Select multiple sets</string>
    <string name="tvChoose">Choose the correct answer</string>
    <string name="btnStop">Stop</string>
    <string name="process_text_action_name">Remember in MyD</string>
    <string name="interestFact0">Did you know, that The Komodo dragon, found in Indonesia, is the largest lizard in the world, growing up to 3 meters (9.8 feet) in length.</string>
    <string name="interestingFactName">Did you know?</string>
    <string name="success_add">Success!</string>
    <string name="translation">Translation</string>
    <string name="add_word">Add word</string>
    <string name="word">Word</string>
    <string name="translation">Translation</string>
    <string name="word">Word</string>
    <string name="add_new_word">Add new word</string>
</resources>
