<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lnzPopup"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="20dp"
    android:background="@drawable/background_with_shadow_white_background"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvPopupNewSetTitle"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvPopupNewSetTitle"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            />

        <TextView
            android:id="@+id/tvPopupNewSetName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/tvPopupNewSetName" />

        <EditText
            android:id="@+id/etPopUpNewSet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:ems="10"
            android:inputType="textPersonName"
            />

        <Button
            android:id="@+id/btnPopUpOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnPopUpOk"
            android:background="@color/colorRecent"
            android:gravity="center"
            android:layout_gravity="right"
            android:textSize="13sp"
            />

    </LinearLayout>


</FrameLayout>