<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#caf5f5f5"
    tools:context="com.example.stas.dictionary.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="354dp"
        android:layout_height="314dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_with_shadow_white_background"
        android:orientation="vertical"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.248">

        <TextView
            android:id="@+id/tvDoYouKnow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:text="@string/tvDoYouKnow" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="192dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/background_with_shadow_blue_background">

            <TextView
                android:id="@+id/tvWord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="tvWord" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                android:background="@drawable/background_with_shadow_white_background"
                android:text="@string/btnNo" />

            <Button
                android:id="@+id/btnYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="3dp"
                android:background="@drawable/background_with_shadow_white_background"
                android:text="@string/btnYes" />
        </FrameLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tvNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:clickable="true"
        android:text="@string/tvNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="398dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewInterestFact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

    <Button
        android:id="@+id/btnTraining"
        android:layout_width="344dp"
        android:layout_height="41dp"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/btnTraining"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewInterestFact"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="71dp"
        android:layout_marginEnd="14dp"
        android:layout_marginStart="14dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2" />

</android.support.constraint.ConstraintLayout>